# Amaru

./: Cargo.toml  LICENSE  README.md  build.rs  change_report.md  config.toml  monitor_status.json  status_development.md
clamwin/: CMakeLists.txt
clamwin/include/: amaru_clamwin.h
clamwin/src/: clamav_scanner.cpp  ffi_bridge.cpp
docs/: README.md
docs/support/: contact.md  faq.md
docs/technical/: README.md  api-reference.md  architecture.md  detection-engine.md
docs/user-guides/: analyzing.md  detection-improvements.md  detection-system.md  faq.md  getting-started.md  quarantine.md  real-time-protection.md  realtime-protection.md  updates.md
examples/: eicar_detection.rs  use_core_services.rs
gui/: LICENSE  index.html  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
gui/src/: App.svelte  app.css  main.ts
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  wix.wxs
gui/src-tauri/src/: main.rs
gui/src-tauri/wix/: main.wxs
gui/src/lib/: types.ts  utils.ts
gui/src/lib/components/: ActionButton.svelte  Button.svelte  Card.svelte  Chart.svelte  Dashboard.svelte  Footer.svelte  Header.svelte  Icon.svelte  ModernHeader.svelte  NotificationCenter.svelte  Notifications.svelte  ScanHistoryList.svelte  Sidebar.svelte  StatCard.svelte  StatusCard.svelte  ThreatCard.svelte
gui/src/lib/components/animations/: ScanAnimation.svelte
gui/src/lib/components/notifications/: NotificationItem.svelte  NotificationManager.svelte  NotificationToast.svelte
gui/src/lib/components/settings/: SettingsView.svelte
gui/src/lib/components/widgets/: SystemStatus.svelte
gui/src/lib/stores/: antivirus.ts  config.ts  statusStore.ts  theme.ts
gui/src/routes/: +layout.svelte  +page.svelte  Dashboard.svelte  Quarantine.svelte  Scan.svelte  ScanConfig.svelte  Settings.svelte
gui/src/routes/help/: HelpPage.svelte  index.svelte
gui/tests/: Dashboard.test.ts  setup.ts
installer/: CHANGES.md  DotNetChecker.nsh  README.md  license.txt  module-config.json  setup.nsi  unified_installer.nsi
installer/signatures/official/: backdoors.yar  cryptominers.yar  eicar_test.yar  fileless.yar  malware_generic.yar
radare2-analyzer/: Cargo.toml  build.rs
radare2-analyzer/src/: events.rs  lib.rs
realtime-monitor/: Cargo.toml
realtime-monitor/src/: filters.rs  lib.rs
scripts/: build_installer.ps1  build_installer_fixed.ps1  cleanup_legacy.ps1  enforce-utf8.ps1  installer.nsi  package.ps1  prepare-install.ps1  sign-installer.ps1
signatures/custom/: basic_malware.yar
signatures/official/: ransomware.yar  trojans.yar  webshells.yar
src/: Cargo.toml  behavior.rs  cache.rs  concurrency_manager.rs  config.rs  coordinator.rs  core_services.rs  events.rs  ipc.rs  lib.rs  main.rs  memory_optimized.rs  quarantine.rs  resource_manager.rs  service.rs
src/detection/algorithms/: behavior_sequence.cpp  behavior_sequence.h  ml_detection.cpp  ml_detection.h  ml_models.cpp  ml_models.h  pattern_matching.cpp  pattern_matching.h
src/logging/: mod.rs
src/notifications/: mod.rs
src/security/: digital_signature.rs  integrity.rs  mod.rs  secure_logging.rs  tamper_protection.rs
tests/: amaru_core_tests.rs  integration_test.rs  integration_tests.rs  performance_tests.rs
updater/: Cargo.toml
updater/src/: lib.rs
yara-engine/: Cargo.toml  build.rs
yara-engine/src/: cache.rs  heuristic.rs  lib.rs
