[package]
name = "amaru"
version = "0.1.0"
edition = "2024"
authors = ["Amaru Contributors"]
description = "Next Generation Antivirus with YARA and Radare2 integration"
license = "GPL-2.0"
repository = "https://github.com/CripterHack/Amaru"

[workspace]
members = [
    ".",
    "yara-engine", 
    "realtime-monitor",
    "radare2-analyzer"
]

[dependencies]
# CLI arguments parsing
clap = { version = "4.5.0", features = ["derive"] }
# Logging
log = "0.4.21"
env_logger = "0.10.2"
# Error handling
anyhow = "1.0"
thiserror = "1.0.57"
# Async runtime
tokio = { version = "1.34", features = ["full"] }
# Windows specific
winapi = { version = "0.3", features = ["winuser", "fileapi", "handleapi", "processthreadsapi"] }
# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13.4"
# Cross-thread communication
crossbeam-channel = "0.5"
# Hash calculation
md5 = "0.7.0"
sha256 = "1.4.0"
# Fecha y hora
chrono = "0.4.34"
# Generación de números aleatorios
rand = "0.8.5"
# Internal modules
amaru-yara-engine = { path = "yara-engine" }
amaru-realtime-monitor = { path = "realtime-monitor" }
amaru-radare2-analyzer = { path = "radare2-analyzer" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
