[package]
name = "amaru-radare2-analyzer"
version = "0.1.0"
edition = "2024"
authors = ["Amaru Contributors"]
description = "Radare2 static analysis integration for Amaru Antivirus"
license = "GPL-2.0"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
log = "0.4"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Process handling
subprocess = "0.2"
# Path handling
pathdiff = "0.2"
walkdir = "2.3"
# Async runtime
tokio = { version = "1.34", features = ["full"] }
# Windows API
winapi = { version = "0.3", features = ["winbase", "fileapi", "handleapi", "processthreadsapi"] }
# Time handling
chrono = "0.4"
# Hash functions
md5 = "0.7.0"
sha2 = "0.10" 