[package]
name = "radare2-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["CripterHack"]
description = "Analizador estático basado en Radare2 para Amaru Antivirus"
license = "GPL-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
env_logger = "0.10"
tokio-test = "0.4" 