[package]
name = "realtime-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Amaru Security Team"]
description = "Monitor en tiempo real para Amaru Antivirus"
license = "GPL-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
crossbeam-channel = "0.5"
regex = "1.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security"
]}

[dev-dependencies]
tempfile = "3.8"
env_logger = "0.10"
tokio-test = "0.4" 