[package]
name = "amaru-yara-engine"
version = "0.1.0"
edition = "2021"
authors = ["Amaru Contributors"]
description = "YARA integration for Amaru Antivirus"
license = "GPL-2.0"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
log = "0.4"
# Serialization
serde = { version = "1.0", features = ["derive"] }
# Random number generation
rand = "0.8"
# YARA integration
yara = "0.21"
# File handling
walkdir = "2.3"
# Parent crate dependencies
tokio = { version = "1.34", features = ["full"] }

[lib]
name = "amaru_yara_engine"
path = "src/lib.rs" 