[package]
name = "yara-engine"
version = "0.1.0"
edition = "2021"
authors = ["CripterHack"]
description = "Motor YARA para Amaru Antivirus"
license = "GPL-2.0"

[dependencies]
yara = { version = "0.13", features = ["vendored"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
rayon = "1.8"
dashmap = "5.5"
walkdir = "2.4"
md5 = "0.7"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
env_logger = "0.10"
tokio-test = "0.4"

[build-dependencies]
cc = "1.0" 